--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   </script>
 </head>
 <body>
+
+<div id="network-status" style="position: fixed; top: 0; left: 50%; transform: translateX(-50%);
+background-color: #444; color: white; padding: 8px 16px; border-radius: 0 0 6px 6px;
+font-family: sans-serif; font-size: 14px; display: none; z-index: 9999;"></div>
+
+
+<div style="text-align: center; margin-top: 40px;">
+  <img src="icon.png" alt="MP Tende Logo" style="width: 128px; height: 128px;">
+</div>
+
   <h1>Calcolatore Guida Pergola</h1>
   <div class="input-group">
     <label for="tipo">Tipologia Pergola:</label>
@@ -81,5 +91,33 @@
       output.style.display = 'block';
     }
   </script>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+      navigator.serviceWorker.register('sw.js').then(function (registration) {
+        console.log('ServiceWorker registrato con successo:', registration.scope);
+      }, function (err) {
+        console.log('Registrazione del ServiceWorker fallita:', err);
+      });
+    });
+  }
+</script>
+
+
+<script>
+  const statusDiv = document.getElementById('network-status');
+  function updateOnlineStatus() {
+    statusDiv.style.display = 'block';
+    statusDiv.textContent = navigator.onLine ? 'Sei online' : 'Sei offline';
+    statusDiv.style.backgroundColor = navigator.onLine ? '#4caf50' : '#f44336';
+    setTimeout(() => { statusDiv.style.display = 'none'; }, 3000);
+  }
+
+  window.addEventListener('load', updateOnlineStatus);
+  window.addEventListener('online', updateOnlineStatus);
+  window.addEventListener('offline', updateOnlineStatus);
+</script>
+
 </body>
 </html>
