--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ font-family: sans-serif; font-size: 14px; display: none; z-index: 9999;"></div>
   <img src="icon.png" alt="MP Tende Logo" style="width: 128px; height: 128px;">
 </div>
 
-  <h1>Calcolatore Guida Pergola</h1>
+  <h1>Guida Pergola</h1>
   <div class="input-group">
     <label for="tipo">Tipologia Pergola:</label>
     <select id="tipo">
